fix: alignment of the results section for Huffman trees

--- a/static/css/huffman.css
+++ b/static/css/huffman.css
@@ -152,6 +152,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-left: 100px;
   width: 100%;
 }
 
